Add environment class, update docs, new customer endpoints
