# back-end/src/swagger/models/models.js
@@ -8,7 +8,67 @@ exports.customersResponse = {
     "city": "São Paulo",
     "birthDate": "1996-12-10T02:00:00.000Z",
     "__v": 0
-}
+};
+
+exports.customersListResponse = [
+    {
+        "_id": "6009a77c0ea4d044747a2d18",
+        "type": "PF",
+        "name": "Deni Slapelis",
+        "document": 46989096861,
+        "phone": "(11) 98964-3889",
+        "uf": "SP",
+        "city": "São Paulo",
+        "birthDate": "1996-12-10T02:00:00.000Z",
+        "__v": 0
+    },
+    {
+        "_id": "6009af9ed936e73bc8f952e5",
+        "type": "PF",
+        "name": "Denis Slapelis",
+        "document": 53617053068,
+        "phone": "(11) 98964-3889",
+        "uf": "SP",
+        "city": "São Paulo",
+        "birthDate": "1996-12-10T02:00:00.000Z",
+        "__v": 0
+    },
+    {
+        "_id": "6009afa5d936e73bc8f952e6",
+        "type": "PF",
+        "name": "Denis Slapelis",
+        "document": 23912326088,
+        "phone": "(11) 98964-3889",
+        "uf": "SP",
+        "city": "São Paulo",
+        "birthDate": "1996-12-10T02:00:00.000Z",
+        "__v": 0
+    },
+    {
+        "_id": "6009afaed936e73bc8f952e7",
+        "type": "PF",
+        "name": "Denis Slapelis",
+        "document": 56926564000,
+        "phone": "(11) 98964-3889",
+        "uf": "SP",
+        "city": "São Paulo",
+        "birthDate": "1996-12-10T02:00:00.000Z",
+        "__v": 0
+    },
+    {
+        "_id": "6009afc5d936e73bc8f952e8",
+        "type": "PF",
+        "name": "Denis Slapelis",
+        "document": 37303052046,
+        "phone": "(11) 98964-3889",
+        "uf": "SP",
+        "city": "São Paulo",
+        "birthDate": "1996-12-10T02:00:00.000Z",
+        "__v": 0
+    }
+];
+
+exports.totalCustomersResponse = 6;
 
 exports.localizationsResponse = [
     {
@@ -23,7 +83,7 @@ exports.localizationsResponse = [
         "city": "Ji-Paraná",
         "__v": 0
     }
-]
+];
 
 exports.customError = {
     name: 'Error type',
